Bug 357660 - Progress bar and window's title change after closing Configure Toolbars dialog
Summary: Progress bar and window's title change after closing Configure Toolbars dialog
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-07 16:45 UTC by Elvis Angelaccio
Modified: 2016-11-19 14:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-01-07 16:45:18 UTC
Steps to reproduce:

Reproducible: Always

Steps to Reproduce:
1. Open an archive with Ark
2. "Settings" -> "Configure Toolbars..."
3. Click Cancel.

Actual Results:  
1. The progress bar is loading on the status bar
2. The window's title changes from the name of the archive to the absolute URL of the archive.

Expected Results:  
Nothing.
Comment 1 Elvis Angelaccio 2016-06-13 09:54:35 UTC
Git commit c0c5d0033ba524968c596332a8f4f610f25fa75d by Elvis Angelaccio.
Committed on 13/06/2016 at 09:46.
Pushed by elvisangelaccio into branch 'master'.

mainwindow: use setupGUI()

This allow use to drop quite a lot of old, buggy and redundant code that is already
provided by setupGUI() for free.

We also gain the standard "Show Toolbar" checkbox in the Settings menu.
FIXED-IN: 16.08.0

Differential Revision: D1829

M  +3    -33   app/mainwindow.cpp
M  +0    -3    app/mainwindow.h

http://commits.kde.org/ark/c0c5d0033ba524968c596332a8f4f610f25fa75d
Comment 2 Ragnar Thomsen 2016-07-19 20:08:37 UTC
The window title still changes to full path including "file://" prefix when making a change and pressing OK in the Configure Toolbars dialog.
Comment 3 Elvis Angelaccio 2016-11-19 14:53:03 UTC
Git commit 47e45e73ea6d9559951b2e0dd2b8368b99f63749 by Elvis Angelaccio.
Committed on 19/11/2016 at 14:50.
Pushed by elvisangelaccio into branch 'Applications/16.12'.

part: stop changing the window title when the toolbar gets edited

KParts::ReadOnlyPart::guiActivateEvent(), which emits `setWindowCaption`
with url().toDisplayString() as argument, gets called when the toolbar
gets changed. We don't want this behavior, so we override
guiActivateEvent() with an empty implementation that does nothing.
FIXED-IN: 16.12.0

M  +6    -0    part/part.cpp
M  +3    -0    part/part.h

http://commits.kde.org/ark/47e45e73ea6d9559951b2e0dd2b8368b99f63749