mainwindow: use setupGUI()

This allow use to drop quite a lot of old, buggy and redundant code that is already
provided by setupGUI() for free.

We also gain the standard "Show Toolbar" checkbox in the Settings menu.

BUG: 357660
FIXED-IN: 16.08.0

Differential Revision: D1829